--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,150 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+
+:root {
+  font-family: 'Inter Tight', sans-serif;
+}
+button {
+  font-family: 'kepler-std', sans-serif;
+  font-weight:bold;
+  font-style:italic;
+}
+h1, h2, h3 ,h4 ,h5, h6 {
+    font-weight:400;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    .kepler {
+      font-family: "kepler-std", serif;
+      &.normal {
+        font-weight:400;
+      }
+      &.bold {
+        font-weight:700;
+      }
+      &.italic {
+        font-style:italic;
+      }
+    }
+}
+body {
+  font-family: var(--font-sans);
+  background:linear-gradient(45deg, #f5efff, #fff);
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  line-height: 1.6;
+}
+
+// General text styles
+.text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
+}
+
+.text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+}
+
+.text-m {
+    font-size: 1rem;
+    line-height: 1.5rem;
+}
+
+.text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+}
+
+.text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+}
+
+.text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+}
+
+.text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+}
+
+.text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+}
+
+.text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+}
+
+.text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
+}
+
+.text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
+}
+
+.text-8xl {
+    font-size: 6rem;
+    line-height: 1;
+}
+
+.text-9xl {
+    font-size: 8rem;
+    line-height: 1;
+}
+  
+// Width styling (for use in determining widths of elements)
+.width-100 {
+    width:100%
+}
+.width-75 {
+    width:75%;
+}
+.width-50 {
+    width:50%;
+}
+.width-25 {
+    width:50%;
+}
+
+/* General Margin */
+.m-0 { margin: 0px; }
+.m-1 { margin: 4px; }
+.m-2 { margin: 8px; }
+.m-4 { margin: 16px; }
+.m-8 { margin: 32px; }
+
+/* Margin Top */
+.mt-0 { margin-top: 0px; }
+.mt-1 { margin-top: 4px; }
+.mt-2 { margin-top: 8px; }
+.mt-4 { margin-top: 16px; }
+.mt-8 { margin-top: 32px; }
+
+/* Margin Bottom */
+.mb-0 { margin-bottom: 0px; }
+.mb-1 { margin-bottom: 4px; }
+.mb-2 { margin-bottom: 8px; }
+.mb-4 { margin-bottom: 16px; }
+.mb-8 { margin-bottom: 32px; }
+
+/* Margin Left */
+.ml-0 { margin-left: 0px; }
+.ml-1 { margin-left: 4px; }
+.ml-2 { margin-left: 8px; }
+.ml-4 { margin-left: 16px; }
+.ml-8 { margin-left: 32px; }
+
+/* Margin Right */
+.mr-0 { margin-right: 0px; }
+.mr-1 { margin-right: 4px; }
+.mr-2 { margin-right: 8px; }
+.mr-4 { margin-right: 16px; }
+.mr-8 { margin-right: 32px; }
