--- a/src/app/shared/cards/card-layout-2x2/card-layout-2x2.component.html
+++ b/src/app/shared/cards/card-layout-2x2/card-layout-2x2.component.html
@@ -1,13 +1,13 @@
-<section class="component-container mt-8">
+<section class="component-container mt-4">
     <div class="layout-flex">
         <div class="card-border-wrap">
             <div class="card">
-
+                <img src="../../../../assets/img/JEX-portfolio-screenshot.png" />
             </div>
         </div>
         <div class="card-border-wrap">
             <div class="card">
-                
+                <img src="../../../../assets/img/Refreshworks-portfolio-screenshot.png" />
             </div>
         </div>
         <div class="card-border-wrap">
