--- a/src/app/shared/cards/card-layout-2x2/card-layout-2x2.component.scss
+++ b/src/app/shared/cards/card-layout-2x2/card-layout-2x2.component.scss
@@ -16,7 +16,7 @@
             &::before {
                 content: "";
                 position: absolute;
-                inset: -2px; /* Expand slightly to show the border */
+                inset: -1px; /* Expand slightly to show the border */
                 border-radius: inherit;
                 background: linear-gradient(45deg, #917eff, #a130ce);
                 padding: 2px; /* Border thickness */
@@ -41,12 +41,22 @@
 
         .card {
             position: relative;
-            height: 300px;
+            height: -webkit-fill-available;
+            aspect-ratio: 16 / 9;
             width: 100%;
             border-radius: 28px; /* Slightly smaller than wrap to fit */
             pointer-events: auto;
-            z-index: 1; /* Ensure the card is above the border */
+            z-index: -2; /* Ensure the card is above the border */
             transition: all .2s ease-in-out;
+            img {
+                z-index:-2;
+                width:100%;
+                height:100%;
+                overflow:hidden;
+                border-radius:28px;
+                object-fit:cover;
+                object-position:center;
+            }
         }
     }
 }
