--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 :root {
   font-family: 'Inter Tight', sans-serif;
 }
-button {
+button, a {
   font-family: 'kepler-std', sans-serif;
   font-weight:bold;
   font-style:italic;
@@ -102,7 +102,7 @@ body {
   
 // Width styling (for use in determining widths of elements)
 .width-100 {
-    width:100%
+    width:100%;
 }
 .width-75 {
     width:75%;
@@ -111,7 +111,20 @@ body {
     width:50%;
 }
 .width-25 {
-    width:50%;
+    width:25%;
+}
+// Width styling (for use in determining widths of elements)
+.height-100 {
+    height:100px;
+}
+.height-75 {
+    height:75px;
+}
+.height-50 {
+    height:50px;
+}
+.height-25 {
+    height:25px;
 }
 
 /* General Margin */
