Added extra cards to our layout

--- a/src/app/shared/cards/card-layout-2x2/card-layout-2x2.component.html
+++ b/src/app/shared/cards/card-layout-2x2/card-layout-2x2.component.html
@@ -12,12 +12,12 @@
         </div>
         <div class="card-border-wrap">
             <div class="card">
-                
+                <img src="../../../../assets/img/Tethys-portfolio-screenshot.png" />
             </div>
         </div>
         <div class="card-border-wrap">
             <div class="card">
-                
+                <img src="../../../../assets/img/Onyx-portfolio-screenshot.png" />
             </div>
         </div>
     </div>
