Added extra functionality to our cards

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -20,7 +20,8 @@
     type="link"
     link="#skills-section"
     [withIcon]="true"
-    customClasses="text-xl icon-sm text-color-primary"
+    iconSize="xs"
+    customClasses="text-xl text-color-primary"
     annotationPadding="0"
     annotationDelay="2000"
     ></app-button>
