--- a/src/app/shared/cards/card-layout-2x2/card-layout-2x2.component.html
+++ b/src/app/shared/cards/card-layout-2x2/card-layout-2x2.component.html
@@ -1,23 +1,107 @@
 <section class="component-container mt-4">
     <div class="layout-flex">
         <div class="card-border-wrap">
-            <div class="card">
+            <div class="card" name="jex">
                 <img src="../../../../assets/img/JEX-portfolio-screenshot.png" />
+                <div class="card-overlay-container">
+                    <div class="card-overlay-content">
+                        <h6 class="text-xl mt-0 mb-0">
+                            <span class="kepler bold italic" annotationPadding="-5">JEX</span>
+                        </h6>
+                        <p class="text-sm mt-0">
+                            Conquering the employment agency market with smart tech solutions? It's possible!
+                        </p>
+                        <app-button
+                        class="btn-link underline"
+                        label="Go to project"
+                        type="link"
+                        link="#skills-section"
+                        [withIcon]="true"
+                        iconSize="xs"
+                        customClasses="text-md text-color-primary"
+                        annotationPadding="-5"
+                        annotationDelay="0"
+                        ></app-button>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="card-border-wrap">
-            <div class="card">
+            <div class="card" name="refreshworks">
                 <img src="../../../../assets/img/Refreshworks-portfolio-screenshot.png" />
+                <div class="card-overlay-container">
+                    <div class="card-overlay-content">
+                        <h6 class="text-xl mt-0 mb-0">
+                            <span class="kepler bold italic" annotationPadding="-5">Refreshworks</span>
+                        </h6>
+                        <p class="text-sm mt-0">
+                            Custom solutions for every client, and taking leadership in the A.I. revolution.
+                        </p>
+                        <app-button
+                        class="btn-link underline"
+                        label="Go to project"
+                        type="link"
+                        link="#skills-section"
+                        [withIcon]="true"
+                        iconSize="xs"
+                        customClasses="text-md text-color-primary"
+                        annotationPadding="-5"
+                        annotationDelay="0"
+                        ></app-button>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="card-border-wrap">
             <div class="card">
                 <img src="../../../../assets/img/Tethys-portfolio-screenshot.png" />
+                <div class="card-overlay-container">
+                    <div class="card-overlay-content">
+                        <h6 class="text-xl mt-0 mb-0">
+                            <span class="kepler bold italic" annotationPadding="-5">Tethys</span>
+                        </h6>
+                        <p class="text-sm mt-0">
+                            A full stack movie app, developed from concept to deployment.
+                        </p>
+                        <app-button
+                        class="btn-link underline"
+                        label="Go to project"
+                        type="link"
+                        link="#skills-section"
+                        [withIcon]="true"
+                        iconSize="xs"
+                        customClasses="text-md text-color-primary"
+                        annotationPadding="-5"
+                        annotationDelay="0"
+                        ></app-button>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="card-border-wrap">
             <div class="card">
                 <img src="../../../../assets/img/Onyx-portfolio-screenshot.png" />
+                <div class="card-overlay-container">
+                    <div class="card-overlay-content">
+                        <h6 class="text-xl mt-0 mb-0">
+                            <span class="kepler bold italic" annotationPadding="-5">Onyx</span>
+                        </h6>
+                        <p class="text-sm mt-0">
+                            Working with SpaceX Launches API to give a simple overview of upcoming and past launches.
+                        </p>
+                        <app-button
+                        class="btn-link underline"
+                        label="Go to project"
+                        type="link"
+                        link="#skills-section"
+                        [withIcon]="true"
+                        iconSize="xs"
+                        customClasses="text-md text-color-primary"
+                        annotationPadding="-5"
+                        annotationDelay="0"
+                        ></app-button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
