--- a/src/app/shared/cards/card-layout-2x2/card-layout-2x2.component.scss
+++ b/src/app/shared/cards/card-layout-2x2/card-layout-2x2.component.scss
@@ -1,3 +1,5 @@
+@use '../../../../styles.scss' as *;
+
 .component-container {
     .layout-flex {
         display: flex;
@@ -34,7 +36,7 @@
             &:hover {
                 transform:translateY(-6px);
                 .card {
-                    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+                    box-shadow: rgba(149, 157, 165, 0.5) 0px 8px 24px;
                 }
             }
         }
@@ -48,6 +50,7 @@
             pointer-events: auto;
             z-index: -2; /* Ensure the card is above the border */
             transition: all .2s ease-in-out;
+            overflow:hidden;
             img {
                 z-index:-2;
                 width:100%;
@@ -56,6 +59,33 @@
                 border-radius:28px;
                 object-fit:cover;
                 object-position:center;
+            }
+            .card-overlay-container {
+                position:absolute;
+                background:linear-gradient(45deg, #cdabff, #fff);
+                bottom:-100%;
+                width:100%;
+                aspect-ratio: 16 / 9;
+                transition: all .3s;
+            }
+            .card-overlay-content {
+                padding: 20px;
+                display: flex;
+                flex-direction:column;
+                align-items: flex-start;
+                align-content: flex-end;
+                height: -webkit-fill-available;
+            }
+            &:hover .card-overlay-container {
+                bottom:0;
+                
+            }
+        }
+    }
+    @media (max-width: $tablet-s) {
+        .layout-flex {
+            .card-border-wrap {
+                width:100%;
             }
         }
     }
